--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   },
   "homepage": "https://github.com/VITMAV42/mintahazi2015osz#readme",
   "dependencies": {
+    "async": "^1.5.0",
     "body-parser": "^1.14.1",
     "ejs": "^2.3.4",
+    "emojilib": "^1.1.0",
     "express": "^4.13.3",
-    "express-session": "^1.12.1"
+    "express-session": "^1.12.1",
+    "markdown": "^0.5.0",
+    "mongoose": "^4.2.5"
   }
 }
