First few unit tests
Install mocha with -g flag and run mocha

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "async": "^1.5.0",
     "body-parser": "^1.14.1",
+    "chai": "^3.4.1",
     "ejs": "^2.3.4",
     "emojilib": "^1.1.0",
     "express": "^4.13.3",
